--- a/app/src/main/res/layout/activity_bmi_result.xml
+++ b/app/src/main/res/layout/activity_bmi_result.xml
@@ -10,5 +10,6 @@
     <TextView
         android:id="@+id/text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:gravity="center"/>
 </LinearLayout>
